--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
-      /* لمنع السحب الافتراضي للمتصفح */
       touch-action: none;
     }
     body {
@@ -22,6 +21,7 @@
       position: relative;
       overflow: hidden;
     }
+    /* الشريط العلوي */
     .topbar {
       background-color: #007BFF;
       color: #fff;
@@ -35,6 +35,7 @@
     .topbar h1 {
       font-size: 20px;
     }
+    /* زر القائمة المكون من ثلاثة مستطيلات */
     .menu-toggle {
       position: absolute;
       right: 20px;
@@ -52,6 +53,7 @@
       background-color: #fff;
       border-radius: 2px;
     }
+    /* الشريط الجانبي مع تأثير الدوران 360 */
     .sidebar {
       position: fixed;
       top: 0;
@@ -72,6 +74,7 @@
       margin-bottom: 20px;
       color: #007BFF;
     }
+    /* تكبير أيقونة الإغلاق (X) */
     .close-btn {
       position: absolute;
       top: 10px;
@@ -80,12 +83,13 @@
       font-size: 30px;
       color: #000;
     }
+    /* المحتوى الرئيسي */
     .content {
       flex: 1;
       padding: 20px;
       overflow: auto;
     }
-    /* حاوية الخريطة: بدون aspect-ratio */
+    /* حاوية الخريطة */
     .map-container {
       position: relative;
       width: 90%;
@@ -94,26 +98,22 @@
       border: 5px solid #007BFF;
       overflow: hidden;
       touch-action: none;
-      /* يمكنك ضبط ارتفاع ثابت أو نسبة مئوية أو تتركه افتراضيًا */
-      height: 500px; /* مثال: ارتفاع 500px. عدلها كما تريد. */
+      aspect-ratio: 901 / 988;
     }
-    /* جعل الخريطة تتمحور في المنتصف */
+    /* حاوية داخلية تشمل صورة الخريطة والدبوس */
     #mapWrapper {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform-origin: center center; 
-      /* يبدأ بدون أي تحويل */
-      transform: translate(-50%, -50%);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform-origin: top left;
+    }
+    /* صورة الخريطة */
+    #mapImage {
       width: 100%;
       height: auto;
-      /* لا نحدد ارتفاعًا ثابتًا كي تتكيف الصورة */
-    }
-    #mapImage {
       display: block;
-      max-width: 100%;
-      height: auto;
-      margin: 0 auto; /* توسيط الصورة أفقياً */
     }
     /* الدبوس */
     #pin {
@@ -126,8 +126,6 @@
       transform: translate(-50%, -50%);
       animation: blink 1s infinite;
       z-index: 10;
-      top: 0; /* سيُضبط لاحقًا بنسب مئوية */
-      left: 0;
     }
     @keyframes blink {
       0%, 100% { opacity: 1; }
@@ -153,6 +151,7 @@
       color: red;
       display: none;
     }
+    /* الفوتر الثابت */
     .footer {
       background-color: #007BFF;
       color: #fff;
@@ -190,6 +189,7 @@
   <!-- المحتوى الرئيسي -->
   <div class="content">
     <div class="map-container" id="mapContainer">
+      <!-- الحاوية الداخلية التي ستحركها الإيماءات -->
       <div id="mapWrapper">
         <img id="mapImage" src="map-1.png" alt="Map">
         <div id="pin"></div>
@@ -205,13 +205,15 @@
     </div>
   </div>
 
+  <!-- الفوتر الثابت -->
   <div class="footer">
-    جميع الحقوق محفوظة © للطالب فهد القحطاني
+    جميع الحقوق محفوظة  © للطالب فهد القحطاني
   </div>
 
-  <!-- ملف القاعات الخارجي -->
+  <!-- تحميل ملف القاعات الخارجي -->
   <script src="rooms.js"></script>
   <script>
+    // التأكد من تحميل بيانات القاعات
     if (typeof roomCoordinates === 'undefined') {
       console.error("لم يتم تحميل بيانات القاعات من rooms.js");
     }
@@ -233,39 +235,19 @@
       }
     }
 
-    /* متغيرات التكبير/التصغير والتحريك والدوران */
+    // متغيرات التكبير/التصغير والتحريك
     let currentScale = 1;
     let currentTranslate = { x: 0, y: 0 };
     let initialTranslate = { x: 0, y: 0 };
     let initialDistance = 0;
     let initialScale = 1;
     let startTouches = [];
-    let initialCenter = { x: 0, y: 0 };
 
-    /* نريد أن يكون الشرق في أعلى الشاشة:
-       الشرق = -90 درجة تعويض (بحسب افتراضك أو قياسك للواقع).
-       عدّل حسب الحاجة. */
-    const rotationOffset = -90;
-    let currentRotation = 0;
-
-    /* دالة لضبط التحويلات (تكبير/سحب/دوران) */
     function setTransform() {
-      // نستخدم transform: translate(...) scale(...) rotate(...)
-      // لكننا وضعنا mapWrapper في المنتصف (top:50%, left:50%, translate(-50%, -50%))
-      // لذلك نضيف الترجمة والتكبير والدوران فوق ذلك
-      const translateStr = `translate(${currentTranslate.x}px, ${currentTranslate.y}px)`;
-      const scaleStr = `scale(${currentScale})`;
-      const rotateStr = `rotate(${currentRotation + rotationOffset}deg)`;
-
-      mapWrapper.style.transform = `
-        translate(-50%, -50%) 
-        ${translateStr} 
-        ${scaleStr} 
-        ${rotateStr}
-      `;
+      mapWrapper.style.transform = `translate(${currentTranslate.x}px, ${currentTranslate.y}px) scale(${currentScale})`;
     }
 
-    /* أحداث اللمس (Pinch & Pan) */
+    // أحداث اللمس
     mapContainer.addEventListener('touchstart', function(e) {
       if (e.touches.length === 1) {
         startTouches = [{ x: e.touches[0].clientX, y: e.touches[0].clientY }];
@@ -279,25 +261,20 @@
           startTouches[0].y - startTouches[1].y
         );
         initialScale = currentScale;
-        const rect = mapContainer.getBoundingClientRect();
-        initialCenter = {
-          x: ((e.touches[0].clientX + e.touches[1].clientX) / 2) - rect.left,
-          y: ((e.touches[0].clientY + e.touches[1].clientY) / 2) - rect.top
-        };
       }
     });
 
     mapContainer.addEventListener('touchmove', function(e) {
       e.preventDefault();
       if (e.touches.length === 1 && startTouches.length === 1) {
-        // سحب
+        // سحب (Pan)
         let dx = e.touches[0].clientX - startTouches[0].x;
         let dy = e.touches[0].clientY - startTouches[0].y;
         currentTranslate.x = initialTranslate.x + dx;
         currentTranslate.y = initialTranslate.y + dy;
         setTransform();
       } else if (e.touches.length === 2 && startTouches.length === 2) {
-        // تكبير/تصغير
+        // تكبير/تصغير (Pinch Zoom)
         let newTouches = [
           { x: e.touches[0].clientX, y: e.touches[0].clientY },
           { x: e.touches[1].clientX, y: e.touches[1].clientY }
@@ -306,18 +283,7 @@
           newTouches[0].x - newTouches[1].x,
           newTouches[0].y - newTouches[1].y
         );
-        let newScale = initialScale * (newDistance / initialDistance);
-
-        // المركز الجديد
-        const rect = mapContainer.getBoundingClientRect();
-        const newCenter = {
-          x: ((e.touches[0].clientX + e.touches[1].clientX) / 2) - rect.left,
-          y: ((e.touches[0].clientY + e.touches[1].clientY) / 2) - rect.top
-        };
-
-        currentTranslate.x = initialTranslate.x - ((newScale - initialScale) / initialScale) * initialCenter.x;
-        currentTranslate.y = initialTranslate.y - ((newScale - initialScale) / initialScale) * initialCenter.y;
-        currentScale = newScale;
+        currentScale = initialScale * (newDistance / initialDistance);
         setTransform();
       }
     });
@@ -330,48 +296,37 @@
       }
     });
 
-    /* دوران الخريطة مع مستشعر الجهاز */
-    window.addEventListener('deviceorientation', function(e) {
-      if (e.alpha !== null) {
-        // قيمة alpha (0 - 360) تمثل دوران الجهاز حول المحور العمودي
-        // نأخذ السالب لكي يدور مع حركة الجهاز
-        currentRotation = -e.alpha;
-        setTransform();
-      }
-    });
-
-    /* إعادة تعيين */
+    // إعادة تعيين الخريطة
     function resetMap() {
       mapImage.src = "map-1.png";
       currentScale = 1;
       currentTranslate = { x: 0, y: 0 };
       initialTranslate = { x: 0, y: 0 };
-      currentRotation = 0;
       setTransform();
       pin.style.display = 'none';
       roomInput.value = '';
       errorMessage.style.display = 'none';
     }
 
-    /* تحديد القاعة */
+    // تحديد القاعة وعرض موقع الدبوس (يُحسب بالنسبة للخريطة الأصلية)
     function locateRoom() {
-      const roomNumber = roomInput.value.trim();
+      const roomNumber = roomInput.value;
       if (roomCoordinates[roomNumber]) {
         const { x, y, floor } = roomCoordinates[roomNumber];
-        // اختيار الخريطة الصحيحة
+
+        // تغيير الصورة حسب الطابق
         if (floor === 1) {
           mapImage.src = "map-1.png";
         } else if (floor === 2) {
           mapImage.src = "map-2.png";
         }
 
-        // حساب الموقع بنسب مئوية من أبعاد الخريطة الأصلية 901×988
+        // حساب موقع الدبوس كنسبة مئوية بناءً على الأبعاد الأصلية (901×988)
         const xPercent = (x / 901) * 100;
         const yPercent = (y / 988) * 100;
         pin.style.left = `${xPercent}%`;
         pin.style.top = `${yPercent}%`;
         pin.style.display = 'block';
-
         errorMessage.style.display = 'none';
       } else {
         errorMessage.style.display = 'block';
@@ -379,13 +334,12 @@
       }
     }
 
-    /* تفعيل وإخفاء الشريط الجانبي */
+    // تفعيل وإخفاء الشريط الجانبي
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
       sidebar.classList.toggle('active');
     }
 
-    /* عند تحميل الصفحة */
     window.onload = () => {
       populateRoomList();
     };
