--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="tooltip" id="tooltip" role="status" aria-live="polite">
-    اسحب للخريطة، واستخدم التكبير/التصغير باللمس
-  </div>
+  <div class="tooltip" id="tooltip">اسحب للخريطة، واستخدم التكبير/التصغير باللمس</div>
 
-  <header class="topbar" role="banner">
+  <header class="topbar">
     <button id="theme-toggle" class="theme-btn" aria-label="تبديل الوضع">🌙</button>
     <h1>خريطة القاعات</h1>
-    <div class="menu-toggle" onclick="toggleSidebar()" role="button" tabindex="0" aria-label="فتح القائمة">
+    <div id="menuToggle" class="menu-toggle" aria-label="فتح القائمة" role="button" tabindex="0">
       <div class="bar"></div><div class="bar"></div><div class="bar"></div>
     </div>
   </header>
 
-  <nav class="sidebar" id="sidebar" role="navigation" aria-label="القائمة الجانبية">
-    <div class="close-btn" onclick="toggleSidebar()" role="button" tabindex="0" aria-label="إغلاق القائمة">×</div>
-    <h2 hidden>القائمة الرئيسية</h2>
+  <nav id="sidebar" class="sidebar">
+    <div id="closeSidebar" class="close-btn" aria-label="إغلاق القائمة" role="button" tabindex="0">×</div>
+    <h2>القائمة</h2>
     <ul>
       <li><a href="#">الرئيسية</a></li>
       <li><a href="#">حول</a></li>
@@ -31,28 +29,26 @@
     </ul>
   </nav>
 
-  <main class="content" role="main">
-    <h2 hidden>محتوى الخريطة</h2>
-    <div class="map-container" id="mapContainer">
+  <main class="content">
+    <div id="mapContainer" class="map-container">
       <div id="mapWrapper">
         <img id="mapImage" src="map-1.png" alt="خريطة القاعات">
         <canvas id="pathCanvas"></canvas>
-        <div id="pin" aria-hidden="true"></div>
-        <div id="animMarker" aria-hidden="true"></div>
+        <div id="pin"></div>
+        <div id="animMarker"></div>
       </div>
     </div>
 
     <div class="form-container">
-      <label for="roomInput" class="visually-hidden">رقم القاعة</label>
-      <input type="text" id="roomInput" list="roomList" placeholder="اكتب رقم القاعة" aria-label="اكتب رقم القاعة">
+      <input type="text" id="roomInput" list="roomList" placeholder="اكتب رقم القاعة">
       <datalist id="roomList"></datalist>
-      <button onclick="locateRoom()" aria-label="ابحث عن القاعة">ابحث</button>
-      <button onclick="resetMap()" aria-label="إعادة تعيين الخريطة">إعادة تعيين</button>
-      <p class="error-message" id="errorMessage" role="alert">يرجى إدخال رقم قاعة صحيح.</p>
+      <button id="searchBtn">ابحث</button>
+      <button id="resetBtn">إعادة تعيين</button>
+      <p id="errorMessage" class="error-message">يرجى إدخال رقم قاعة صحيح.</p>
     </div>
   </main>
 
-  <footer class="footer" role="contentinfo">© فهد القحطاني</footer>
+  <footer class="footer">© فهد القحطاني</footer>
 
   <script src="rooms.js"></script>
   <script src="paths.rel.js"></script>
