--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
   <footer class="footer">© فهد القحطاني</footer>
 
+  <!-- Reihenfolge هامّة: rooms.js ثم paths.rel.js ثم script.js -->
   <script src="rooms.js"></script>
   <script src="paths.rel.js"></script>
   <script src="script.js"></script>
