--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <div id="closeSidebar" class="close-btn" aria-label="إغلاق القائمة" role="button" tabindex="0">×</div>
     <h2>القائمة</h2>
     <ul>
-      <li><a href="#">الرئيسية</a></li>
-      <li><a href="#">حول</a></li>
-      <li><a href="#">اتصل بنا</a></li>
+  <li><a href="#">الرئيسية</a></li>
+  <li><a href="#">حول</a></li>
+  <li><a href="#">اتصل بنا</a></li>
+  <!-- زر النسبة الموزونة محذوف مؤقتاً -->
     </ul>
   </nav>
 
@@ -54,5 +55,6 @@
   <script src="rooms.js"></script>
   <script src="paths.rel.js"></script>
   <script src="script.js"></script>
+  <!-- لا يوجد زر خدمة جانبية حالياً -->
 </body>
 </html>
